--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,7 @@ span {
 body {
   margin: 0;
 }
+
+.title {
+  text-align: center;
+}
